alteração na branch alt_a

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git e Alterações</title>
 </head>
 <body>
-    testes de versoes git
+    <h1>alterações de versão</h1>
+    <h2>versao 0.1</h2>
+    
     
 </body>
 </html>
