alteração versao alt_b

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>alterações de versão</h1>
-    <h2>versao 0.1</h2>
+    <h2>versao 0.2</h2>
+    <h1>adicionado coisas da versao alt_b</h1>
     
     
 </body>
